@@ -8,22 +8,31 @@ import java.util.List;
 public class ProbabilityBox {
     private final List<String> possibilities = new ArrayList<String>();
     private boolean initializing = true;
-
+    private boolean contradictionFound = false;
     public void possible(String... givenPossibilities) {
-        if(possibilities.size() == 1) return;
-        if(initializing) {
-            Collections.addAll(possibilities, givenPossibilities);
-            initializing = false;
-        } else {
-            possibilities.retainAll(Arrays.asList(givenPossibilities));
-        }
+        if(contradictionFound) return;
+       if(containsAny(possibilities, givenPossibilities)) {
+           possibilities.retainAll(Arrays.asList(givenPossibilities));
+       } else {
+           possibilities.addAll(List.of(givenPossibilities));
+           if(initializing) {
+               initializing = false;
+           } else {
+               contradictionFound = true;
+               possibilities.clear();
+           }
+       }
     }
 
     public List<String> getPossibilities() {
         return possibilities;
     }
-
-    public boolean shouldBother() {
-        return getPossibilities().size() != 1;
+    private static boolean containsAny(List<String> a, String[] b) {
+        for (String element : b) {
+            if (a.contains(element)) {
+                return true; // Found a match
+            }
+        }
+        return false; // No match found
     }
 }
